build pages before push

--- a/.github/workflows/release-pages.yml
+++ b/.github/workflows/release-pages.yml
@@ -15,17 +15,18 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Install dependencies (optional, if you need to build something)
-      # Uncomment the following if you need to run a build step.
-      # - name: Set up Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16'
-      #
-      # - name: Install dependencies
-      #   run: npm install
-      #
-      # - name: Build project
-      #   run: npm run build
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+
+      - name: Install dependencies
+        working-directory: public
+        run: npm install
+
+      - name: Build project
+        working-directory: public
+        run: npx webpack
 
       # Step 3: Deploy to gh-pages branch
       - name: Deploy to gh-pages
