--- a/.github/workflows/release-pages.yml
+++ b/.github/workflows/release-pages.yml
@@ -23,11 +23,9 @@ jobs:
           node-version: "18"
 
       - name: Install dependencies
-        working-directory: public
         run: npm install
 
       - name: Build project
-        working-directory: public
         run: npm run build
 
       # Step 3: Deploy to gh-pages branch
@@ -35,5 +33,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
-          publish_dir: ./public # Directory containing the files to deploy
+          publish_dir: ./ # Directory containing the files to deploy
           publish_branch: gh-pages
