switch publish to tags

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,8 @@ name: Publish to GitHub Packages
 
 on:
   push:
-    branches:
-      - main # Trigger on push to the 'main' branch
-      - switch2js
-  workflow_dispatch: # Allow manual trigger
+    tags:
+      - "v*"
 
 jobs:
   build-and-publish:
