--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy to gh-pages
 
+permissions: {}
+
 on:
-  push:
-    branches:
-      - main # Trigger this action when pushing to the main branch
+  workflow_call:
 
 jobs:
   deploy:
@@ -33,5 +33,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
-          publish_dir: ./ # Directory containing the files to deploy
+          publish_dir: ./public # Directory containing the files to deploy
           publish_branch: gh-pages
