--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -41,6 +41,6 @@ jobs:
 
   deploy:
     uses: ./.github/workflows/.deploy.yml
-    needs: [conf, publish-package, release]
+    needs: [release]
     permissions: {}
     secrets: inherit
