--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -20,6 +20,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Configure SSH with Deploy Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GH_PAGES_DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+
       - name: Determine Default Branch
         id: default_branch
         run: |
@@ -72,8 +80,6 @@ jobs:
 
       - name: Create and Push Tag
         if: ${{ success() }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
         run: |
           # Use validated tag name and commit hash
           git tag ${{ env.tag_name }} ${{ env.commit_hash }}
