--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Configure SSH with Deploy Key
         run: |
