--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -20,20 +20,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          persist-credentials: false
-
-      - name: Configure SSH with Deploy Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.GH_PAGES_DEPLOY_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-          chmod 644 ~/.ssh/known_hosts
-
-      - name: Force Git to Use SSH
-        run: |
-          git remote set-url origin git@github.com:${GITHUB_REPOSITORY}.git
-          git remote -v
+          ssh-key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
 
       - name: Determine Default Branch
         id: default_branch
