--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
+          deploy_key: ${{ secrets.MASTERKEY }}
           publish_dir: ./public # Directory containing the files to deploy
           publish_branch: gh-pages
