--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          ssh-key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
+          ssh-key: ${{ secrets.MASTERKEY }}
 
       - name: Determine Default Branch
         id: default_branch
