--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -42,5 +42,6 @@ jobs:
   deploy:
     uses: ./.github/workflows/.deploy.yml
     needs: [release]
-    permissions: {}
+    permissions:
+      packages: read
     secrets: inherit
