--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: protected-gh-pages-env # Specify the environment to use
+    permissions:
+      packages: read
 
     steps:
       # Step 1: Check out the repository
