--- a/.github/workflows/push2main.yml
+++ b/.github/workflows/push2main.yml
@@ -10,5 +10,6 @@ permissions: {}
 jobs:
   deploy:
     uses: ./.github/workflows/.deploy.yml
-    permissions: {}
+    permissions:
+      packages: read
     secrets: inherit
