--- a/.github/workflows/.publish.yml
+++ b/.github/workflows/.publish.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,12 +33,12 @@ jobs:
           VERSION: ${{ inputs.version }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build package
         run: npm run build
 
       - name: Publish to GitHub Packages
-        run: npm publish
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
