--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -25,6 +25,7 @@ jobs:
     permissions:
       packages: write
       contents: write
+      id-token: write
     secrets: inherit
     with:
       version: ${{ needs.conf.outputs.tag-version }}
