--- a/.github/workflows/.publish.yml
+++ b/.github/workflows/.publish.yml
@@ -20,26 +20,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18" # Specify your Node.js version
+          node-version: "18"
           registry-url: "https://npm.pkg.github.com/"
-
       - name: Update package.json version
         run: |
           npm version $VERSION --no-git-tag-version
         env:
           VERSION: ${{ inputs.version }}
-
       - name: Install dependencies
         run: npm ci
-
       - name: Build package
         run: npm run build
-
       - name: Publish to GitHub Packages
-        run: npm publish --provenance --access public
+        run: npm publish --provenance --access public # Publishing protected package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.PACKAGE_PAT }}
