--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -10,7 +10,7 @@ on:
         description: "Commit hash to tag (default is latest commit on the default branch)"
         required: false
 
-jobs:
+jobs: # this should ideally be a single monolithic maintained action
   create-tag:
     runs-on: ubuntu-latest
     environment: PROTECTED-ENV
