--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -25,6 +25,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
+    secrets: inherit
     with:
       version: ${{ needs.conf.outputs.tag-version }}
 
@@ -34,6 +35,7 @@ jobs:
     permissions:
       contents: write
       packages: read
+    secrets: inherit
     with:
       version: ${{ needs.conf.outputs.tag-version }}
 
@@ -42,3 +44,4 @@ jobs:
     needs: [release]
     permissions:
       packages: read
+    secrets: inherit
